# lanecore-bauunternehmer-cockpit

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  INVENTORY.md  README.md  docker-compose.yml  render.yaml
.claude/: launch.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  ce1b2118ad6b_make_projekt_id_nullable_on_analyse_jobs.py  ed9e6e477df5_add_preislisten_and_produkte_tables.py
backend/app/: main.py
backend/app/api/routes/: bauplan.py  health.py  preisliste.py  projekte.py  stats.py  subscription.py
backend/app/core/: auth.py  config.py  database.py  storage.py
backend/app/models/: __init__.py  analyse_ergebnis.py  analyse_job.py  preisliste.py  projekt.py  subscription.py
backend/app/schemas/: __init__.py  bauplan.py  preisliste.py  projekt.py
backend/app/services/: analyse_pipeline.py  audit_service.py  bauplan_service.py  kalkulation_service.py  lieferanten_api.py  pdf_service.py  preisliste_service.py  subscription_service.py
backend/tests/: conftest.py  test_analyse_pipeline.py  test_bauplan_upload.py  test_pdf_service.py
lv-preisrechner/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
lv-preisrechner/backend/alembic/: env.py
lv-preisrechner/backend/alembic/versions/: 074b144a36ad_add_fabrikat_fields_to_position.py  380d28ee954d_initial_schema_with_lvp_prefix.py  6d65f7e5ab0f_initial_schema.py  8f2c1a9b4d01_add_is_bedarf_is_alternative.py  a1f0d7c89b2e_add_pricing_foundation.py  a4b1e7c30982_add_parse_progress.py  b72fa1c8d903_add_product_corrections.py  b9c4e1f2a583_replace_company_settings_with_typed.py  (+11 more)
lv-preisrechner/backend/app/: __init__.py  main.py
lv-preisrechner/backend/scripts/: backfill_product_codes.py  live_smoke.py  recalc_salach_synthetic.py  smoke_candidates_endpoint.py  smoke_lookup.py  stuttgart_diagnostic.py
lv-preisrechner/backend/tests/: conftest.py  test_aufmass.py  test_auth.py  test_bedarf_alternative.py  test_claude_client.py  test_customer_project.py  test_dna_matcher.py  test_e2e_habau.py  test_entry_update.py  test_invoices.py  test_kalkulation_integration.py  test_kemmler_real_lookup.py  test_knauf_korrekturen_etappe1.py  test_knauf_korrekturen_etappe2.py  test_knauf_korrekturen_etappe3.py  test_knauf_recipe_loader.py  test_lv_original_filled.py  test_lv_pdf_export.py  test_lvs_candidates.py  test_lvs_gap_resolve.py  test_lvs_gaps.py  test_material_normalizer.py  test_materialrezepte.py  test_normalize.py  test_offer_lifecycle.py  test_package_lookup.py  test_package_resolver.py  test_parse_progress.py  test_price_lookup.py  test_pricelist_parser.py  test_pricelist_parser_config.py  test_pricelist_parser_retry.py  test_pricing_foundation.py  test_pricing_readiness.py  test_product_corrections.py  test_rezepte_ausbau.py  test_tenant_settings.py  test_unit_abbreviations.py  test_unit_normalizer.py  test_unit_tolerance_lookup.py
(+345 files in other folders)
